--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/splash"
+    android:background="@drawable/splashgirl"
     tools:context=".SplashScreen">
 
     <ImageView
         android:id="@+id/splashImage"
         android:layout_width="135dp"
         android:layout_height="135dp"
-        android:src="@drawable/splasicon"
+        android:src="@drawable/yogalogo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
