--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -11,7 +11,7 @@
         android:text="text"
         android:textStyle="bold"
         android:textColor="@color/white"
-        android:background="@color/purple_700"
+        android:background="@color/red"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
     <Space
