--- a/app/src/main/res/layout/activity_before_age18.xml
+++ b/app/src/main/res/layout/activity_before_age18.xml
@@ -204,21 +204,21 @@
 
                 </LinearLayout>
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <com.google.android.gms.ads.AdView
-                        xmlns:ads="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/adView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        ads:adSize="BANNER"
-                        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-                    </com.google.android.gms.ads.AdView>
+<!--                <RelativeLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent">-->
+<!--                    <com.google.android.gms.ads.AdView-->
+<!--                        xmlns:ads="http://schemas.android.com/apk/res-auto"-->
+<!--                        android:id="@+id/adView"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:layout_alignParentBottom="true"-->
+<!--                        ads:adSize="BANNER"-->
+<!--                        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
+<!--                    </com.google.android.gms.ads.AdView>-->
 
-                </RelativeLayout>
+<!--                </RelativeLayout>-->
 
 
                 <LinearLayout
@@ -1151,21 +1151,21 @@
 
 
                 </LinearLayout>
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-                    <com.google.android.gms.ads.AdView
-                        xmlns:ads="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/adView2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_alignParentBottom="true"
-                        ads:adSize="BANNER"
-                        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">
-                    </com.google.android.gms.ads.AdView>
+<!--                <RelativeLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="match_parent">-->
+<!--                    <com.google.android.gms.ads.AdView-->
+<!--                        xmlns:ads="http://schemas.android.com/apk/res-auto"-->
+<!--                        android:id="@+id/adView2"-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_centerHorizontal="true"-->
+<!--                        android:layout_alignParentBottom="true"-->
+<!--                        ads:adSize="BANNER"-->
+<!--                        ads:adUnitId="ca-app-pub-3940256099942544/6300978111">-->
+<!--                    </com.google.android.gms.ads.AdView>-->
 
-                </RelativeLayout>
+<!--                </RelativeLayout>-->
 
                 <LinearLayout
                     android:layout_gravity="center"
