--- a/app/src/main/res/layout/activity_pose1.xml
+++ b/app/src/main/res/layout/activity_pose1.xml
@@ -16,7 +16,7 @@
 
         <pl.droidsonroids.gif.GifImageView
             android:layout_marginTop="10dp"
-            android:src="@drawable/female_excercise"
+            android:src="@drawable/exersice_1"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
 
